# job-interviews

./: README.md
python-backend-engineer/: README.md  mise.toml  pyproject.toml
python-backend-engineer/links/: models.py  serializers.py  urls.py  views.py
python-backend-engineer/links/migrations/: 0001_initial.py  0002_linkclick.py
python-backend-engineer/shortener/: asgi.py  settings.py  urls.py  wsgi.py
